--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@testing-library/react": "14.0.0",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "@vitejs/plugin-react-swc": "3.0.0",
-    "happy-dom": "9.8.1",
-    "standard": "17.0.0",
-    "vite": "4.2.0",
-    "vitest": "0.30.1"
+    "@testing-library/react": "^14.0.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react-swc": "^3.0.0",
+    "@vitest/ui": "^0.30.1",
+    "happy-dom": "^9.8.1",
+    "standard": "^17.0.0",
+    "vite": "^4.2.0",
+    "vitest": "^0.30.1"
   },
   "eslintConfig": {
     "extends": [
